Validação de formulários e outras melhorias

--- a/src/app/autores/cadastro/cadastro.page.html
+++ b/src/app/autores/cadastro/cadastro.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <form #autorForm="ngForm" >
+  <form #autorForm="ngForm" (ngSubmit)="salvar()">
     <ion-item>
       <ion-label position="floating">Nome *:</ion-label>
       <ion-input type="text"
@@ -17,12 +17,12 @@
                  id="nome"
                  name="nome"
                  [(ngModel)]="autor.nome"
-                 (keyup.enter)="salvar()"></ion-input>
+                 autofocus="true"></ion-input>
     </ion-item>
     <ion-fab vertical="bottom"
              horizontal="end"
              slot="fixed">
-      <ion-fab-button type="submit" [disabled]="autorForm.form.invalid" (click)="salvar()">
+      <ion-fab-button type="submit" [disabled]="autorForm.form.invalid">
         <ion-icon name="checkmark"></ion-icon>
       </ion-fab-button>
     </ion-fab>
