--- a/src/app/livros/livros.page.html
+++ b/src/app/livros/livros.page.html
@@ -41,7 +41,7 @@
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="danger"
-                         (click)="exclusao(livro)">
+                         (click)="exclusao(livro, slidingItem)">
           <ion-icon slot="icon-only"
                     name="trash"></ion-icon>
         </ion-item-option>
