--- a/src/app/autores/autores.page.html
+++ b/src/app/autores/autores.page.html
@@ -14,7 +14,7 @@
         <ion-button (click)="editar(autor)" fill="clear" color="primary">
           <ion-icon name="create" slot="icon-only"></ion-icon>
         </ion-button>      
-        <ion-button (click)="excluir(autor)" fill="clear" color="primary">
+        <ion-button (click)="exclusao(autor)" fill="clear" color="primary">
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-buttons>
