Corrigido erro ao salvar autor

--- a/src/app/autores/cadastro/cadastro.page.html
+++ b/src/app/autores/cadastro/cadastro.page.html
@@ -22,7 +22,7 @@
     <ion-fab vertical="bottom"
              horizontal="end"
              slot="fixed">
-      <ion-fab-button type="submit" [disabled]="autorForm.form.invalid" (ngClick)="salvar()">
+      <ion-fab-button type="submit" [disabled]="autorForm.form.invalid" (click)="salvar()">
         <ion-icon name="checkmark"></ion-icon>
       </ion-fab-button>
     </ion-fab>
